--- a/css/reset.css
+++ b/css/reset.css
@@ -1,8 +1,9 @@
 /* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
+    v2.0 | 20110126
+    License: none (public domain)
 
-   custom changes: add text-decoration to none
+    custom changes: add text-decoration to none
+    add button and textarea in reseted styles
 */
 
 html, body, div, span, applet, object, iframe,
@@ -17,7 +18,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video, button, textarea {
     margin: 0;
     padding: 0;
     border: 0;
