--- a/css/reset.css
+++ b/css/reset.css
@@ -2,9 +2,15 @@
     v2.0 | 20110126
     License: none (public domain)
 
-    custom changes: add text-decoration to none
-    add button and textarea in reseted styles
+    custom changes:
+    - add text-decoration to none
+    - add button and textarea in reseted styles
+    - add border-box as default mesurement
 */
+
+* {
+    box-sizing: border-box;
+}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
